2009-08-13  Daniel Elstner  <danielk@openismus.com>

	Review and clean up after build overhaul

	* autogen.sh: Pass --enable-maintainer-mode to ./configure since the
	automatic rebuild of the reference documentation is only enabled in
	maintainer mode.  AM_MAINTAINER_MODE is already in configure.ac.
	* configure.ac (AC_CONFIG_HEADERS): Prepend build/config.h to the
	list of header files, because the first file in the list has its .in
	file generated by autoheader, and will thus include every AC_DEFINE
	from every Autoconf macro that is used.  The macros defined in the
	installed cairommconfig.h header should be namespaced and limited to
	meta information about the installed cairomm library.
	Also move cairommconfig.h to the top-level directory, in order to
	avoid the need to add the cairomm/ subdirectory to the include path.
	(PKG_CHECK_MODULES): Collapse the checks for optional cairo modules
	into a loop, and use PKG_CHECK_EXISTS() instead of the full-blown
	PKG_CHECK_MODULES().  Also, be a bit cleverer about the lists of .pc
	files and module names generated along the way.
	(AC_CONFIG_FILES): List all potentially installed files literally,
	instead of creating the list of output files dynamically.  This is
	much simpler and also gets us free shipping.  Remove data/Makefile.
	* cairommconfig.h.in: Add file to repository, as it should not be
	autogenerated.  Of the content, keep only the CAIROMM_ namespaced
	macros.
	* cairomm/context*.cc: Remove cairomm/ prefix from cairommconfig.h
	include statements.  This was already wrong before, but moving the
	file around made it visible.
	* Makefile.am: Clean up a bit.
	(DIST_SUBDIRS): Have Automake figure it out automatically.
	(cairomm_include_HEADERS): Remove, as cairomm/cairomm.h is already
	installed in cairomm/Makefile.am.
	(nodist_cairomm_libinclude_HEADERS): Relocate cairommconfig.h to
	the top-level directory.
	(nodist_pkgconfig_DATA): Use $(CAIROMM_INSTALL_PC) substitution from